--- a/Test.html
+++ b/Test.html
@@ -5,9 +5,7 @@
 </head>
 
 <body style="background-color: #F0F4FF;">
-    <div id="contents">        
-        <iframe src="https://beta.compliancesafetymgr.com/Login.aspx" style="width: 100%; min-height: 1000px;" id="iframeCSMLogin"></iframe>
-    </div>
+    <iframe src="https://beta.compliancesafetymgr.com/Login.aspx" style="width: 100%; min-height: 1000px; overflow-x: scroll" id="iframeCSMLogin"></iframe>
 </body>
 
 </html>
